[package]
name = "config"
version = "0.1.0"
edition = "2024"

[lib]
name = "config"

[[bench]]
name = "display_join"
harness = false

[dependencies]
anstream = "0.6"
bytes = "1.11"
clap = { version = "4.6", features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage", "cargo", "wrap_help", "unicode"]}
owo-colors = "4.3"
regex = "1.12"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.8"
itertools = "0.14"
proptest = "1.10"
proptest-derive = "0.8"
rand = "0.10"
rstest = "0.26"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
