[workspace]
resolver = "3"
members = [
    "config",
    "config-derive",
    "display-as-debug-derive",
]

# Performance can be improved for release mode and benchmarks by enabling
# link-time optimizations to optimize across crate boundaries and reducing the
# number of codegen units to 1 (reduces parallelism in the compiler).

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
