[package]
name = "config-ir"
version = "0.1.0"
edition = "2024"
description = "Intermediate representation for config"

[dependencies]
bytes = "1.11"
config-ast = { path = "../config-ast" }
display-ext = { path = "../display-ext" }
thiserror = "2.0"

[dev-dependencies]
proptest = "1.10"
proptest-derive = "0.8"
rstest = "0.26"
