[package]
name = "config"
version = "0.1.0"
edition = "2024"

[lib]
name = "config"

# [[bin]]
# name = "config"

[dependencies]
bytes = "1.11"
config-ast = { path = "../config-ast"}
regex = "1.12"

# CLI Dependencies
anstream = "0.6"
clap = { version = "4.6", features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage", "cargo", "wrap_help", "unicode"]}
owo-colors = "4.3"
thiserror = "2.0"
