[package]
name = "config"
version = "0.1.0"
edition = "2024"

[lib]
name = "config"

[[bench]]
name = "display_join"
harness = false

[[bench]]
name = "parse_to_ast"
harness = false

[dependencies]
bytes = "1.11"
regex = "1.12"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.8"
itertools = "0.14"
proptest = "1.11"
proptest-derive = "0.8"
rand = "0.10"
rstest = "0.26"
